[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-mcp"
version = "2.1.0"
description = "MCP server for IR knowledge base semantic search over 23 authoritative sources"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["mcp", "rag", "security", "incident-response", "semantic-search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "mcp>=1.0.0",
    "chromadb>=1.0.0",
    "sentence-transformers>=2.2.0",
    "pyyaml>=6.0",
    "toml>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
rag-mcp = "rag_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_mcp"]
